--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,6 @@ version: '3.9'
 
 services:
   web:
-    build: nile555/node-todo-app:latest
+    image: nile555/node-todo-app:latest
     ports:
       - "8000:8000"
